--- a/07 Music Player/src/index.html
+++ b/07 Music Player/src/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
     <title>
-      Learn Basic String and Array Methods by Building a Music Player App
+      Music Player App
     </title>
   </head>
 
@@ -25,7 +25,7 @@
             <div></div>
             <div></div>
           </div>
-          <h1 class="fcc-title">freeCodeCamp</h1>
+          <h1 class="fcc-title">Masterpiece</h1>
           <div class="parallel-lines">
             <div></div>
             <div></div>
@@ -34,7 +34,7 @@
         <div class="player-content">
           <div id="player-album-art">
             <img
-              src="https://cdn.freecodecamp.org/curriculum/js-music-player/quincy-larson-album-art.jpg"
+              src="https://upload.wikimedia.org/wikipedia/en/6/6e/MiSaMo_Masterpiece_cover_art.png"
               alt="song cover art"
             />
           </div>
